src/test/pass/lambda_workout.ly
define f(lsi: list[integer]) {

}

f(
    [1,
     {|| 2}(),
     {|| [3]}()[0],
     {|| [[4]] }
                 ()
                     [
                         {|| 0 }()
                     ]
                     [
                         {|| 0 }()
                     ],
     {|| {|| 5 }} () (),
     [{|| 6}() , {|| 7}(), {|| 8}()] [0]
    ]
)
